Add basic content: avatar and self-description

--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>fraulyoner</title>
+</head>
+<body>
+
+<h1>frau lyoner</h1>
+
+<img src="http://www.gravatar.com/avatar/d67d1677bae6a3cf2651bb4171b2e578?d=mm&s=200"/>
+
+<p>
+  Hi, I'm Aljona Murygina aka Frau Lyoner doing stuff with computers since 2011.
+  I'm one of these <a
+    href="https://www.linkedin.com/pulse/20140912183833-3226221-the-magic-of-coding-why-programmers-are-modern-day-wizards">
+  modern-day wizards</a> that make amazing things happen with the magic of coding.
+  Using a varied repertoire of magic spells (Java, Javascript, HTML, CSS, SASS) I love to create beautiful, usable web
+  applications. I live out my passion for beautiful projects and clean code in the magical rooms of the wonderful
+  company <a href="http://synyx.de/">synyx</a> in Karlsruhe, Germany.
+</p>
+
+</body>
+</html>
