--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>fraulyoner</title>
+  <link href="css/normalize.min.css" type="text/css" rel="stylesheet">
+  <link href="css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 
-<h1>frau lyoner</h1>
+<img src="TODO" alt="frau lyoner">
 
 <img src="http://www.gravatar.com/avatar/d67d1677bae6a3cf2651bb4171b2e578?d=mm&s=200"/>
 
@@ -15,9 +17,10 @@
   I'm one of these <a
     href="https://www.linkedin.com/pulse/20140912183833-3226221-the-magic-of-coding-why-programmers-are-modern-day-wizards">
   modern-day wizards</a> that make amazing things happen with the magic of coding.
-  Using a varied repertoire of magic spells (Java, Javascript, HTML, CSS, SASS) I love to create beautiful, usable web
-  applications. I live out my passion for beautiful projects and clean code in the magical rooms of the wonderful
-  company <a href="http://synyx.de/">synyx</a> in Karlsruhe, Germany.
+  Using a various repertoire of magic spells (Java, Javascript, HTML, CSS/SASS and further more) I love to create
+  usable web applications that bring joy and happiness to people.
+  I live out my passion for beautiful projects and clean code in the magical rooms of the wonderful company
+  <a href="http://synyx.de/">synyx</a> in Karlsruhe, Germany.
 </p>
 
 </body>
