Add note that the page is under construction

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+<h1>ATTENTION!</h1>
+<h2>This page is currently work in progress. Please come back later!</h2>
+<hr/>
+
 <img src="TODO" alt="frau lyoner">
 
 <img src="http://www.gravatar.com/avatar/d67d1677bae6a3cf2651bb4171b2e578?d=mm&s=200"/>
