Add profile picture instead of using gravatar due to better responsiveness

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <h2>This page is currently work in progress. Please come back later!</h2>
 <hr/>
 
-<img src="TODO" alt="frau lyoner">
+<img src="TODO" alt="frau lyoner" class="profile--name">
 
-<img src="http://www.gravatar.com/avatar/d67d1677bae6a3cf2651bb4171b2e578?d=mm&s=200"/>
+<img src="img/profile.JPG" class="profile--image"/>
 
 <p>
   Hi, I'm Aljona Murygina aka Frau Lyoner doing stuff with computers since 2011.
