Add content container

--- a/index.html
+++ b/index.html
@@ -8,24 +8,33 @@
 </head>
 <body>
 
-<h1>ATTENTION!</h1>
-<h2>This page is currently work in progress. Please come back later!</h2>
-<hr/>
+<div class="container">
 
-<img src="TODO" alt="frau lyoner" class="profile--name">
+  <!-- Page under construction note -->
+  <h1>ATTENTION!</h1>
+  <h2>This page is currently work in progress. Please come back later!</h2>
+  <hr/>
+  <!-- / Page under construction note -->
 
-<img src="img/profile.JPG" class="profile--image"/>
+  <!-- Profile name and avatar -->
+  <img src="TODO" alt="frau lyoner" class="profile--name">
+  <img src="img/profile.JPG" class="profile--image"/>
+  <!-- / Profile name and avatar -->
 
-<p>
-  Hi, I'm Aljona Murygina aka Frau Lyoner doing stuff with computers since 2011.
-  I'm one of these <a
-    href="https://www.linkedin.com/pulse/20140912183833-3226221-the-magic-of-coding-why-programmers-are-modern-day-wizards">
-  modern-day wizards</a> that make amazing things happen with the magic of coding.
-  Using a various repertoire of magic spells (Java, Javascript, HTML, CSS/SASS and further more) I love to create
-  usable web applications that bring joy and happiness to people.
-  I live out my passion for beautiful projects and clean code in the magical rooms of the wonderful company
-  <a href="http://synyx.de/">synyx</a> in Karlsruhe, Germany.
-</p>
+  <!-- Intro -->
+  <p>
+    Hi, I'm Aljona Murygina aka Frau Lyoner doing stuff with computers since 2011.
+    I'm one of these <a
+      href="https://www.linkedin.com/pulse/20140912183833-3226221-the-magic-of-coding-why-programmers-are-modern-day-wizards">
+    modern-day wizards</a> that make amazing things happen with the magic of coding.
+    Using a various repertoire of magic spells (Java, Javascript, HTML, CSS/SASS and further more) I love to create
+    usable web applications that bring joy and happiness to people.
+    I live out my passion for beautiful projects and clean code in the magical rooms of the wonderful company
+    <a href="http://synyx.de/">synyx</a> in Karlsruhe, Germany.
+  </p>
+  <!-- / Intro -->
+
+</div>
 
 </body>
 </html>
