Add contact information (Twitter, Mail, GitHub etc.)

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>fraulyoner</title>
-  <link href="css/normalize.min.css" type="text/css" rel="stylesheet">
-  <link href="css/style.css" type="text/css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css"/>
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
 <body>
 
@@ -19,6 +20,20 @@
   <!-- Profile name and avatar -->
   <img src="TODO" alt="frau lyoner" class="profile--name">
   <img src="img/profile.JPG" class="profile--image"/>
+  <ul class="profile--links">
+    <li>
+      <a href="https://twitter.com/FrauLyoner" title="Twitter"><i class="fa fa-twitter-square"></i></a>
+    </li>
+    <li>
+      <a href="https://github.com/fraulyoner" title="GitHub"><i class="fa fa-github-square"></i></a>
+    </li>
+    <li>
+      <a href="https://www.instagram.com/fraulyoner/" title="Instagram"><i class="fa fa-instagram"></i></a>
+    </li>
+    <li>
+      <a href="mailto:aljona.mu@gmail.com" title="E-Mail"><i class="fa fa-envelope-square"></i></a>
+    </li>
+  </ul>
   <!-- / Profile name and avatar -->
 
   <!-- Intro -->
@@ -30,7 +45,9 @@
     Using a various repertoire of magic spells (Java, Javascript, HTML, CSS/SASS and further more) I love to create
     usable web applications that bring joy and happiness to people.
     I live out my passion for beautiful projects and clean code in the magical rooms of the wonderful company
-    <a href="http://synyx.de/">synyx</a> in Karlsruhe, Germany.
+    <a href="http://synyx.de/">synyx</a> in
+    <a href="https://www.google.de/maps/place/Karlsruhe/@49.0157643,8.269451,11z/data=!4m2!3m1!1s0x47970648a2e07809:0xb6fc55734cb7ee7f">Karlsruhe,
+      Germany</a>.
   </p>
   <!-- / Intro -->
 
