--- a/index.html
+++ b/index.html
@@ -20,20 +20,6 @@
   <!-- Profile name and avatar -->
   <img src="TODO" alt="frau lyoner" class="profile--name">
   <img src="img/profile.JPG" class="profile--image"/>
-  <ul class="profile--links">
-    <li>
-      <a href="https://twitter.com/FrauLyoner" title="Twitter"><i class="fa fa-twitter-square"></i></a>
-    </li>
-    <li>
-      <a href="https://github.com/fraulyoner" title="GitHub"><i class="fa fa-github-square"></i></a>
-    </li>
-    <li>
-      <a href="https://www.instagram.com/fraulyoner/" title="Instagram"><i class="fa fa-instagram"></i></a>
-    </li>
-    <li>
-      <a href="mailto:aljona.mu@gmail.com" title="E-Mail"><i class="fa fa-envelope-square"></i></a>
-    </li>
-  </ul>
   <!-- / Profile name and avatar -->
 
   <!-- Intro -->
@@ -50,6 +36,23 @@
       Germany</a>.
   </p>
   <!-- / Intro -->
+
+  <!-- Contact -->
+  <ul class="contact--links">
+    <li>
+      <a href="https://twitter.com/FrauLyoner" title="Twitter"><i class="fa fa-twitter-square"></i></a>
+    </li>
+    <li>
+      <a href="https://github.com/fraulyoner" title="GitHub"><i class="fa fa-github-square"></i></a>
+    </li>
+    <li>
+      <a href="https://www.instagram.com/fraulyoner/" title="Instagram"><i class="fa fa-instagram"></i></a>
+    </li>
+    <li>
+      <a href="mailto:aljona.mu@gmail.com" title="E-Mail"><i class="fa fa-envelope-square"></i></a>
+    </li>
+  </ul>
+  <!-- / Contact -->
 
 </div>
 
