Add footer and basic sections for "projects" and "more"

--- a/index.html
+++ b/index.html
@@ -12,46 +12,75 @@
 <div class="container">
 
   <!-- Page under construction note -->
-  <h1>ATTENTION!</h1>
-  <h2>This page is currently work in progress. Please come back later!</h2>
-  <hr/>
+  <section>
+    <h1>ATTENTION!</h1>
+    <h2>This page is currently work in progress. Please come back later!</h2>
+    <hr/>
+  </section>
   <!-- / Page under construction note -->
 
   <!-- Profile name and avatar -->
-  <img src="TODO" alt="frau lyoner" class="profile--name">
-  <img src="img/profile.JPG" class="profile--image"/>
+  <header>
+    <img src="TODO" alt="frau lyoner" class="profile--name">
+    <img src="img/profile.JPG" class="profile--image"/>
+  </header>
   <!-- / Profile name and avatar -->
 
   <!-- Intro -->
-  <p>
-    Hi, I'm Aljona Murygina aka Frau Lyoner doing stuff with computers since 2011.
-    I'm one of these <a
-      href="https://www.linkedin.com/pulse/20140912183833-3226221-the-magic-of-coding-why-programmers-are-modern-day-wizards">
-    modern-day wizards</a> that make amazing things happen with the magic of coding.
-    Using a various repertoire of magic spells (Java, Javascript, HTML, CSS/SASS and further more) I love to create
-    usable web applications that bring joy and happiness to people.
-    I live out my passion for beautiful projects and clean code in the magical rooms of the wonderful company
-    <a href="http://synyx.de/">synyx</a> in
-    <a href="https://www.google.de/maps/place/Karlsruhe/@49.0157643,8.269451,11z/data=!4m2!3m1!1s0x47970648a2e07809:0xb6fc55734cb7ee7f">Karlsruhe,
-      Germany</a>.
-  </p>
+  <section>
+    <h2>That's me</h2>
+    <p>
+      Hi, I'm Aljona Murygina aka Frau Lyoner doing stuff with computers since 2011.
+      I'm one of these <a
+        href="https://www.linkedin.com/pulse/20140912183833-3226221-the-magic-of-coding-why-programmers-are-modern-day-wizards">
+      modern-day wizards</a> that make amazing things happen with the magic of coding.
+      Using a various repertoire of magic spells (Java, Javascript, HTML, CSS/SASS and further more) I love to create
+      usable web applications that bring joy and happiness to people.
+      I live out my passion for beautiful projects and clean code in the magical rooms of the wonderful company
+      <a href="http://synyx.de/">synyx</a> in
+      <a href="https://www.google.de/maps/place/Karlsruhe/@49.0157643,8.269451,11z/data=!4m2!3m1!1s0x47970648a2e07809:0xb6fc55734cb7ee7f">Karlsruhe,
+        Germany</a>.
+    </p>
+  </section>
   <!-- / Intro -->
 
+  <!-- Projects -->
+  <section>
+    <h2>Projects</h2>
+    <p>
+      Check out my <a href="https://github.com/fraulyoner" title="GitHub page">GitHub page</a> to see the projects I
+      contribute to.
+    </p>
+  </section>
+  <!-- / Projects -->
+
+  <!-- More -->
+  <section>
+    <h2>...that's it?</h2>
+    <p>
+      I enjoy to spread my creativity not only during coding, but also in an analogue way.
+    </p>
+  </section>
+  <!-- / More -->
+
   <!-- Contact -->
-  <ul class="contact--links">
-    <li>
-      <a href="https://twitter.com/FrauLyoner" title="Twitter"><i class="fa fa-twitter-square"></i></a>
-    </li>
-    <li>
-      <a href="https://github.com/fraulyoner" title="GitHub"><i class="fa fa-github-square"></i></a>
-    </li>
-    <li>
-      <a href="https://www.instagram.com/fraulyoner/" title="Instagram"><i class="fa fa-instagram"></i></a>
-    </li>
-    <li>
-      <a href="mailto:aljona.mu@gmail.com" title="E-Mail"><i class="fa fa-envelope-square"></i></a>
-    </li>
-  </ul>
+  <footer>
+    <ul class="contact--links">
+      <li>
+        <a href="https://twitter.com/FrauLyoner" title="Twitter"><i class="fa fa-twitter-square"></i></a>
+      </li>
+      <li>
+        <a href="https://github.com/fraulyoner" title="GitHub"><i class="fa fa-github-square"></i></a>
+      </li>
+      <li>
+        <a href="https://www.instagram.com/fraulyoner/" title="Instagram"><i class="fa fa-instagram"></i></a>
+      </li>
+      <li>
+        <a href="mailto:aljona.mu@gmail.com" title="E-Mail"><i class="fa fa-envelope-square"></i></a>
+      </li>
+    </ul>
+    <small class="contact--owner">&copy; Aljona Murygina 2016</small>
+  </footer>
   <!-- / Contact -->
 
 </div>
