Include Bower for better dependency handling

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>fraulyoner</title>
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css"/>
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="lib/normalize.css/normalize.css"/>
+  <link rel="stylesheet" type="text/css" href="lib/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
 <body>
