Include projects pictures, override slider controls

--- a/index.html
+++ b/index.html
@@ -57,41 +57,14 @@
     </p>
     <div class="pictures">
       <ul class="pictures--slider">
-        <li data-thumb="http://sachinchoolur.github.io/lightslider/img/thumb/cS-1.jpg">
-          <img src="http://sachinchoolur.github.io/lightslider/img/cS-1.jpg" />
+        <li data-thumb="img/projects/project_1-thumb.png">
+          <img src="img/projects/project_1.png" />
         </li>
-        <li data-thumb="http://sachinchoolur.github.io/lightslider/img/thumb/cS-2.jpg">
-          <img src="http://sachinchoolur.github.io/lightslider/img/cS-2.jpg" />
+        <li data-thumb="img/projects/project_2-thumb.png">
+          <img src="img/projects/project_2.png" />
         </li>
-        <li data-thumb="http://sachinchoolur.github.io/lightslider/img/thumb/cS-3.jpg">
-          <img src="http://sachinchoolur.github.io/lightslider/img/cS-3.jpg" />
-        </li>
-        <li data-thumb="http://sachinchoolur.github.io/lightslider/img/thumb/cS-4.jpg">
-          <img src="http://sachinchoolur.github.io/lightslider/img/cS-4.jpg" />
-        </li>
-        <li data-thumb="http://sachinchoolur.github.io/lightslider/img/thumb/cS-5.jpg">
-          <img src="http://sachinchoolur.github.io/lightslider/img/cS-5.jpg" />
-        </li>
-        <li data-thumb="http://sachinchoolur.github.io/lightslider/img/thumb/cS-6.jpg">
-          <img src="http://sachinchoolur.github.io/lightslider/img/cS-6.jpg" />
-        </li>
-        <li data-thumb="http://sachinchoolur.github.io/lightslider/img/thumb/cS-7.jpg">
-          <img src="http://sachinchoolur.github.io/lightslider/img/cS-7.jpg" />
-        </li>
-        <li data-thumb="http://sachinchoolur.github.io/lightslider/img/thumb/cS-8.jpg">
-          <img src="http://sachinchoolur.github.io/lightslider/img/cS-8.jpg" />
-        </li>
-        <li data-thumb="http://sachinchoolur.github.io/lightslider/img/thumb/cS-9.jpg">
-          <img src="http://sachinchoolur.github.io/lightslider/img/cS-9.jpg" />
-        </li>
-        <li data-thumb="http://sachinchoolur.github.io/lightslider/img/thumb/cS-10.jpg">
-          <img src="http://sachinchoolur.github.io/lightslider/img/cS-10.jpg" />
-        </li>
-        <li data-thumb="http://sachinchoolur.github.io/lightslider/img/thumb/cS-11.jpg">
-          <img src="http://sachinchoolur.github.io/lightslider/img/cS-12.jpg" />
-        </li>
-        <li data-thumb="http://sachinchoolur.github.io/lightslider/img/thumb/cS-13.jpg">
-          <img src="http://sachinchoolur.github.io/lightslider/img/cS-13.jpg" />
+        <li data-thumb="img/projects/project_3-thumb.png">
+          <img src="img/projects/project_3.png" />
         </li>
       </ul>
     </div>
@@ -139,12 +112,10 @@
 <script type="text/javascript">
   $(document).ready(function () {
     $('.pictures--slider').lightSlider({
-      gallery: true,
+//      gallery: false,
       item: 1,
       loop: true,
-      galleryMargin: 3,
-      thumbMargin: 3,
-      thumbItem: 3
+//      thumbItem: 5
     });
   });
 </script>
