--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
   <!-- Projects -->
   <section>
-    <h2>Projects</h2>
+    <h2>Making ideas come alive</h2>
     <p>
       I'm quite active on GitHub, especially on the
       <a href="https://github.com/synyx/urlaubsverwaltung" title="synyx Urlaubsverwaltung">vacation management tool</a>
@@ -73,7 +73,7 @@
 
   <!-- More -->
   <section>
-    <h2>...that's it?</h2>
+    <h2>Creativity has no limits</h2>
     <p>
       Sometimes I leave the digital world and enjoy being creative in an analog way.
       Since last year I'm highly infected with the
@@ -112,10 +112,8 @@
 <script type="text/javascript">
   $(document).ready(function () {
     $('.pictures--slider').lightSlider({
-//      gallery: false,
       item: 1,
-      loop: true,
-//      thumbItem: 5
+      loop: true
     });
   });
 </script>
