Add lettering pictures

--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
     </p>
     <div class="pictures">
       <ul class="pictures--slider">
-        <li data-thumb="img/projects/project_1-thumb.png">
+        <li>
           <img src="img/projects/project_1.png" />
         </li>
-        <li data-thumb="img/projects/project_2-thumb.png">
+        <li>
           <img src="img/projects/project_2.png" />
         </li>
-        <li data-thumb="img/projects/project_3-thumb.png">
+        <li>
           <img src="img/projects/project_3.png" />
         </li>
       </ul>
@@ -81,6 +81,19 @@
       virus. Follow me on <a href="https://www.instagram.com/fraulyoner/">Instagram</a> if you are interested in my
       non-coding projects.
     </p>
+    <div class="pictures">
+      <ul class="pictures--slider">
+        <li>
+          <img src="img/lettering/lettering_1.jpg" />
+        </li>
+        <li>
+          <img src="img/lettering/lettering_2.jpg" />
+        </li>
+        <li>
+          <img src="img/lettering/lettering_3.jpg" />
+        </li>
+      </ul>
+    </div>
   </section>
   <!-- / More -->
 
