Include logo in header, remove attention note

--- a/index.html
+++ b/index.html
@@ -12,18 +12,9 @@
 
 <div class="container">
 
-  <!-- Page under construction note -->
-  <section>
-    <h1>ATTENTION!</h1>
-    <h2>This page is currently work in progress. Please come back later!</h2>
-    <hr/>
-  </section>
-  <!-- / Page under construction note -->
-
   <!-- Profile name and avatar -->
   <header>
-    <img src="TODO" alt="frau lyoner" class="profile--name">
-    <img src="img/profile.JPG" class="profile--image"/>
+    <img alt="frau lyoner" src="img/logo/logo.png" class="logo"/>
   </header>
   <!-- / Profile name and avatar -->
 
