Re-structure self-description

--- a/index.html
+++ b/index.html
@@ -24,11 +24,16 @@
     <p>
       Hi, I'm Aljona Murygina <i>aka frau lyoner</i> from
       <a target="_blank" href="https://www.google.de/maps/place/Karlsruhe/@49.0157643,8.269451,11z/data=!4m2!3m1!1s0x47970648a2e07809:0xb6fc55734cb7ee7f">
-        Karlsruhe, Germany</a> doing stuff with computers since 2011.
+        Karlsruhe, Germany</a>.
+    </p>
+    <p>
       I'm one of these <a target="_blank" href="https://www.linkedin.com/pulse/20140912183833-3226221-the-magic-of-coding-why-programmers-are-modern-day-wizards">
       modern-day wizards</a> that make amazing things happen with the magic of coding.
-      <i>Java</i> is only one of my various repertoire of magic spells I use to breathe life into things.
+      My magical abilities were discovered in the year 2011, since then I spent a lot of time in learning and refining
+      my powers. <i>Java</i> is only one of my various magic spell repertoire that I use for breathing life into things.
       I love to create usable web applications that bring joy and happiness to people by solving their problems.
+    </p>
+    <p>
       I live out my passion for beautiful projects and clean code in my job at the wonderful company
       <a target="_blank" href="http://synyx.de/">synyx</a>.
     </p>
