--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <p>
       I'm one of these <a target="_blank" href="https://www.linkedin.com/pulse/20140912183833-3226221-the-magic-of-coding-why-programmers-are-modern-day-wizards">
       modern-day wizards</a> that make amazing things happen with the magic of coding.
-      My magical abilities were discovered in the year 2011, since then I spent a lot of time in learning and refining
-      my powers. <i>Java</i> is only one of my various magic spell repertoire that I use for breathing life into things.
+      My magical abilities were discovered in the year 2011, since then I spent a lot of time on learning and refining
+      my powers. <i>Java</i> is only one of my various magic spells that I use for breathing life into things.
       I love to create usable web applications that bring joy and happiness to people by solving their problems.
     </p>
     <p>
