Add language selection nav

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
   </header>
   <!-- / Profile name and avatar -->
 
+  <!-- Language selection -->
+  <nav>
+    <a href="/" class="is-active">English</a>
+    |
+    <a href="#">Deutsch</a>
+  </nav>
+  <!-- / Language selection -->
+
   <!-- Intro -->
   <section>
     <h2>That's me</h2>
