--- a/index.html
+++ b/index.html
@@ -100,6 +100,12 @@
     <div class="pictures">
       <ul class="pictures--slider">
         <li>
+          <img src="img/lettering/lettering_4.jpg" alt="Lettering is fun!"/>
+        </li>
+        <li>
+          <img src="img/lettering/lettering_6.jpg" alt="Lettering is fun!"/>
+        </li>
+        <li>
           <img src="img/lettering/lettering_1.jpg" alt="Lettering is fun!"/>
         </li>
         <li>
@@ -107,6 +113,12 @@
         </li>
         <li>
           <img src="img/lettering/lettering_3.jpg" alt="Lettering is fun!"/>
+        </li>
+        <li>
+          <img src="img/lettering/lettering_5.jpg" alt="Lettering is fun!"/>
+        </li>
+        <li>
+          <img src="img/lettering/lettering_7.jpg" alt="Lettering is fun!"/>
         </li>
       </ul>
     </div>
