--- a/index_de.html
+++ b/index_de.html
@@ -108,6 +108,12 @@
     <div class="pictures">
       <ul class="pictures--slider">
         <li>
+          <img src="img/lettering/lettering_4.jpg" alt="Lettering is fun!"/>
+        </li>
+        <li>
+          <img src="img/lettering/lettering_6.jpg" alt="Lettering is fun!"/>
+        </li>
+        <li>
           <img src="img/lettering/lettering_1.jpg" alt="Lettering is fun!"/>
         </li>
         <li>
@@ -115,6 +121,12 @@
         </li>
         <li>
           <img src="img/lettering/lettering_3.jpg" alt="Lettering is fun!"/>
+        </li>
+        <li>
+          <img src="img/lettering/lettering_5.jpg" alt="Lettering is fun!"/>
+        </li>
+        <li>
+          <img src="img/lettering/lettering_7.jpg" alt="Lettering is fun!"/>
         </li>
       </ul>
     </div>
