--- a/index_de.html
+++ b/index_de.html
@@ -14,7 +14,8 @@
 
   <!-- Profile name and avatar -->
   <header>
-    <img alt="frau lyoner" src="img/logo/logo.png" class="logo"/>
+    <img alt="frau lyoner" src="img/logo/logo.png" class="logo logo--left"/>
+    <img alt="" src="img/logo/profile_small.JPG" class="logo logo--right"/>
   </header>
   <!-- / Profile name and avatar -->
 
