--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h2>That's me</h2>
 
     <p>
-      Hi, I'm Aljona Murygina <i>aka frau lyoner</i> from
+      Hi, I'm Aljona Buchloh (nee Murygina) <i>aka frau lyoner</i> from
       <a target="_blank"
          href="https://www.google.de/maps/place/Karlsruhe/@49.0157643,8.269451,11z/data=!4m2!3m1!1s0x47970648a2e07809:0xb6fc55734cb7ee7f">
         Karlsruhe, Germany</a>.
@@ -148,12 +148,12 @@
         </a>
       </li>
       <li>
-        <a target="_blank" href="mailto:aljona.mu@gmail.com" title="E-Mail">
+        <a target="_blank" href="mailto:aljona.buchloh@gmail.com" title="E-Mail">
           <i class="fa fa-envelope-square"></i>
         </a>
       </li>
     </ul>
-    <small class="contact--owner">&copy; Aljona Murygina 2016</small>
+    <small class="contact--owner">&copy; Aljona Buchloh 2016</small>
   </footer>
   <!-- / Contact -->
 
