Use one picture for lettering examples
* Remove lightslider lib
* Remove single lettering images

--- a/index_de.html
+++ b/index_de.html
@@ -5,7 +5,6 @@
   <title>fraulyoner</title>
   <link rel="stylesheet" type="text/css" href="lib/normalize.css/normalize.css"/>
   <link rel="stylesheet" type="text/css" href="lib/fontawesome/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="lib/lightslider/dist/css/lightslider.min.css"/>
   <link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
 <body>
@@ -92,34 +91,8 @@
       Interesse an meinen analogen Projekten hast.
     </p>
 
-    <div class="pictures">
-      <ul class="pictures--slider">
-        <li>
-          <img src="img/lettering/lettering_1.jpg" alt="Lettering is fun!"/>
-        </li>
-        <li>
-          <img src="img/lettering/lettering_2.jpg" alt="Lettering is fun!"/>
-        </li>
-        <li>
-          <img src="img/lettering/lettering_3.jpg" alt="Lettering is fun!"/>
-        </li>
-        <li>
-          <img src="img/lettering/lettering_4.jpg" alt="Lettering is fun!"/>
-        </li>
-        <li>
-          <img src="img/lettering/lettering_5.jpg" alt="Lettering is fun!"/>
-        </li>
-        <li>
-          <img src="img/lettering/lettering_6.jpg" alt="Lettering is fun!"/>
-        </li>
-        <li>
-          <img src="img/lettering/lettering_7.jpg" alt="Lettering is fun!"/>
-        </li>
-        <li>
-          <img src="img/lettering/lettering_8.jpg" alt="Lettering is fun!"/>
-        </li>
-      </ul>
-    </div>
+    <img src="img/lettering/lettering_collage.jpg" alt="Lettering is fun!"/>
+
   </section>
   <!-- / More -->
 
@@ -154,14 +127,10 @@
 </div>
 
 <script src="lib/jquery/dist/jquery.min.js"></script>
-<script src="lib/lightslider/dist/js/lightslider.min.js"></script>
 
 <script type="text/javascript">
   $(document).ready(function () {
-    $('.pictures--slider').lightSlider({
-      item: 1,
-      loop: true
-    });
+    // to be done
   });
 </script>
 
