Use html template for index page
* Introduce node module template-html therefore

--- a/sources/index.html
+++ b/sources/index.html
@@ -1,33 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>fraulyoner</title>
-  <link rel="stylesheet" type="text/css" href="lib/normalize.css/normalize.css"/>
-  <link rel="stylesheet" type="text/css" href="lib/fontawesome/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css"/>
-</head>
-<body>
-
-<div class="container">
-
-  <!-- Profile name and avatar -->
-  <header>
-    <img alt="frau lyoner" src="img/logo/logo.png" class="logo logo--left"/>
-    <img alt="" src="img/logo/profile_small.JPG" class="logo logo--right"/>
-  </header>
-  <!-- / Profile name and avatar -->
-
-  <!-- Language selection -->
-  <nav>
+<!-- build:language -->
 <a href="index.html" class="is-active">English</a>
 |
 <a href="index_de.html">Deutsch</a>
-</nav>
-  <!-- / Language selection -->
+<!-- /build:language -->
 
-  <!-- Content -->
-  <section>
+<!-- build:intro -->
 <h2>That's me</h2>
 
 <p>
@@ -51,8 +28,9 @@
   I live out my passion for beautiful projects and clean code in my job at the wonderful company
   <a target="_blank" href="http://synyx.de/">synyx</a>.
 </p>
-</section>
-  <section>
+<!-- /build:intro -->
+
+<!-- build:projects -->
 <h2>Making ideas come alive</h2>
 
 <p>
@@ -64,8 +42,9 @@
   the projects I
   contribute to.
 </p>
-</section>
-  <section>
+<!-- /build:projects -->
+
+<!-- build:lettering -->
 <h2>Creativity has no limits</h2>
 
 <p>
@@ -78,46 +57,4 @@
 </p>
 
 <img src="img/lettering/lettering_collage.jpg" alt="Lettering is fun!"/>
-</section>
-  <!-- / Content -->
-
-  <!-- Contact -->
-  <footer>
-    <ul class="contact--links">
-      <li>
-        <a target="_blank" href="https://twitter.com/FrauLyoner" title="Twitter">
-          <i class="fa fa-twitter-square"></i>
-        </a>
-      </li>
-      <li>
-        <a target="_blank" href="https://github.com/fraulyoner" title="GitHub">
-          <i class="fa fa-github-square"></i>
-        </a>
-      </li>
-      <li>
-        <a target="_blank" href="https://www.instagram.com/fraulyoner/" title="Instagram">
-          <i class="fa fa-instagram"></i>
-        </a>
-      </li>
-      <li>
-        <a target="_blank" href="mailto:aljona.buchloh@gmail.com" title="E-Mail">
-          <i class="fa fa-envelope-square"></i>
-        </a>
-      </li>
-    </ul>
-    <small class="contact--owner">&copy; Aljona Buchloh 2017</small>
-  </footer>
-  <!-- / Contact -->
-
-</div>
-
-<script src="lib/jquery/dist/jquery.min.js"></script>
-
-<script type="text/javascript">
-  $(document).ready(function () {
-    // to be done
-  });
-</script>
-
-</body>
-</html>
+<!-- /build:lettering -->
