--- a/sources/index_de.html
+++ b/sources/index_de.html
@@ -1,33 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>fraulyoner</title>
-  <link rel="stylesheet" type="text/css" href="lib/normalize.css/normalize.css"/>
-  <link rel="stylesheet" type="text/css" href="lib/fontawesome/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css"/>
-</head>
-<body>
-
-<div class="container">
-
-  <!-- Profile name and avatar -->
-  <header>
-    <img alt="frau lyoner" src="img/logo/logo.png" class="logo logo--left"/>
-    <img alt="" src="img/logo/profile_small.JPG" class="logo logo--right"/>
-  </header>
-  <!-- / Profile name and avatar -->
-
-  <!-- Language selection -->
-  <nav>
+<!-- build:language -->
 <a href="index.html">English</a>
 |
 <a href="index_de.html" class="is-active">Deutsch</a>
-</nav>
-  <!-- / Language selection -->
+<!-- /build:language -->
 
-  <!-- Content -->
-  <section>
+<!-- build:intro -->
 <h2>Hi, ich bin's</h2>
 
 <p>
@@ -57,8 +34,9 @@
   Firma
   <a target="_blank" href="http://synyx.de/">synyx</a> aus.
 </p>
-</section>
-  <section>
+<!-- /build:intro -->
+
+<!-- build:projects -->
 <h2>Ideen zum Leben erwecken</h2>
 
 <p>
@@ -71,8 +49,9 @@
   <a target="_blank" href="https://github.com/fraulyoner" title="GitHub Seite">GitHub Seite</a> vorbei,
   wenn dich meine Projekte interessieren.
 </p>
-</section>
-  <section>
+<!-- /build:projects -->
+
+<!-- build:lettering -->
 <h2>Kreativit&auml;t ist grenzenlos</h2>
 
 <p>
@@ -86,46 +65,4 @@
 </p>
 
 <img src="img/lettering/lettering_collage.jpg" alt="Lettering is fun!"/>
-</section>
-  <!-- / Content -->
-
-  <!-- Contact -->
-  <footer>
-    <ul class="contact--links">
-      <li>
-        <a target="_blank" href="https://twitter.com/FrauLyoner" title="Twitter">
-          <i class="fa fa-twitter-square"></i>
-        </a>
-      </li>
-      <li>
-        <a target="_blank" href="https://github.com/fraulyoner" title="GitHub">
-          <i class="fa fa-github-square"></i>
-        </a>
-      </li>
-      <li>
-        <a target="_blank" href="https://www.instagram.com/fraulyoner/" title="Instagram">
-          <i class="fa fa-instagram"></i>
-        </a>
-      </li>
-      <li>
-        <a target="_blank" href="mailto:aljona.buchloh@gmail.com" title="E-Mail">
-          <i class="fa fa-envelope-square"></i>
-        </a>
-      </li>
-    </ul>
-    <small class="contact--owner">&copy; Aljona Buchloh 2017</small>
-  </footer>
-  <!-- / Contact -->
-
-</div>
-
-<script src="lib/jquery/dist/jquery.min.js"></script>
-
-<script type="text/javascript">
-  $(document).ready(function () {
-    // to be done
-  });
-</script>
-
-</body>
-</html>
+<!-- /build:lettering -->
