Integrate language selection within heading

--- a/index.html
+++ b/index.html
@@ -18,17 +18,9 @@
   </header>
   <!-- / Profile name and avatar -->
 
-  <!-- Language selection -->
-  <nav>
-<a href="index.html" class="is-active">English</a>
-|
-<a href="index_de.html">Deutsch</a>
-</nav>
-  <!-- / Language selection -->
-
   <!-- Content -->
   <section>
-<h2>That's me</h2>
+<h2>That's me / <a href="index_de.html">Hi, ich bin's</a></h2>
 
 <p>
   Hi, I'm Aljona Buchloh (nee Murygina) <i>aka frau lyoner</i> from
