--- a/index_de.html
+++ b/index_de.html
@@ -18,17 +18,9 @@
   </header>
   <!-- / Profile name and avatar -->
 
-  <!-- Language selection -->
-  <nav>
-<a href="index.html">English</a>
-|
-<a href="index_de.html" class="is-active">Deutsch</a>
-</nav>
-  <!-- / Language selection -->
-
   <!-- Content -->
   <section>
-<h2>Hi, ich bin's</h2>
+<h2>Hi, ich bin's / <a href="index.html">That's me</a></h2>
 
 <p>
   Ich bin Aljona Buchloh (geb. Murygina) aus
