--- a/sources/index.html
+++ b/sources/index.html
@@ -1,11 +1,5 @@
-<!-- build:language -->
-<a href="index.html" class="is-active">English</a>
-|
-<a href="index_de.html">Deutsch</a>
-<!-- /build:language -->
-
 <!-- build:intro -->
-<h2>That's me</h2>
+<h2>That's me / <a href="index_de.html">Hi, ich bin's</a></h2>
 
 <p>
   Hi, I'm Aljona Buchloh (nee Murygina) <i>aka frau lyoner</i> from
