--- a/sources/index_de.html
+++ b/sources/index_de.html
@@ -1,11 +1,5 @@
-<!-- build:language -->
-<a href="index.html">English</a>
-|
-<a href="index_de.html" class="is-active">Deutsch</a>
-<!-- /build:language -->
-
 <!-- build:intro -->
-<h2>Hi, ich bin's</h2>
+<h2>Hi, ich bin's / <a href="index.html">That's me</a></h2>
 
 <p>
   Ich bin Aljona Buchloh (geb. Murygina) aus
