Add extra styling module for contact with icon

--- a/index.html
+++ b/index.html
@@ -55,12 +55,14 @@
   that began as an <i>I'm learning Java</i> project during my training period and was open sourced later.
 </p>
 
-<p>
-  <a class="icon" target="_blank" href="https://github.com/fraulyoner" title="GitHub">
+<p class="contact">
+  <a class="contact--icon" target="_blank" href="https://github.com/fraulyoner" title="GitHub">
     <i class="fa fa-3x fa-github-square"></i>
   </a>
-  Check out my <a target="_blank" href="https://github.com/fraulyoner" title="GitHub page">GitHub page</a>
-  to see the projects I contribute to.
+  <span class="contact--description">
+    Check out my <a target="_blank" href="https://github.com/fraulyoner" title="GitHub page">GitHub page</a>
+    to see the projects I contribute to.
+  </span>
 </p>
 </section>
   <section>
@@ -76,12 +78,14 @@
   virus.
 </p>
 
-<p>
-  <a class="icon" target="_blank" href="https://www.instagram.com/fraulyoner/" title="Instagram">
+<p class="contact">
+  <a class="contact--icon" target="_blank" href="https://www.instagram.com/fraulyoner/" title="Instagram">
     <i class="fa fa-3x fa-instagram"></i>
   </a>
-  Follow me on <a target="_blank" href="https://www.instagram.com/fraulyoner/">Instagram</a> if you are
-  interested in my non-coding projects.
+  <span class="contact--description">
+    Follow me on <a target="_blank" href="https://www.instagram.com/fraulyoner/">Instagram</a> if you are
+    interested in my non-coding projects.
+  </span>
 </p>
 </section>
   <!-- / Content -->
