--- a/index_de.html
+++ b/index_de.html
@@ -62,13 +62,15 @@
   wurde.
 </p>
 
-<p>
-  <a class="icon" target="_blank" href="https://github.com/fraulyoner" title="GitHub">
+<p class="contact">
+  <a class="contact--icon" target="_blank" href="https://github.com/fraulyoner" title="GitHub">
     <i class="fa fa-3x fa-github-square"></i>
   </a>
-  Schau einfach auf meiner
-  <a target="_blank" href="https://github.com/fraulyoner" title="GitHub Seite">GitHub Seite</a> vorbei,
-  wenn dich meine Projekte interessieren.
+  <span class="contact--description">
+    Schau einfach auf meiner
+    <a target="_blank" href="https://github.com/fraulyoner" title="GitHub Seite">GitHub Seite</a> vorbei,
+    wenn dich meine Projekte interessieren.
+  </span>
 </p>
 </section>
   <section>
@@ -84,12 +86,14 @@
   Virus infiziert und bin seither auch auf Instagram zu finden.
 </p>
 
-<p>
-  <a class="icon" target="_blank" href="https://www.instagram.com/fraulyoner/" title="Instagram">
+<p class="contact">
+  <a class="contact--icon" target="_blank" href="https://www.instagram.com/fraulyoner/" title="Instagram">
     <i class="fa fa-3x fa-instagram"></i>
   </a>
-  Folge mir auf <a target="_blank" href="https://www.instagram.com/fraulyoner/">Instagram</a>, wenn du
-  Interesse an meinen analogen Projekten hast.
+  <span class="contact--description">
+    Folge mir auf <a target="_blank" href="https://www.instagram.com/fraulyoner/">Instagram</a>, wenn du
+    Interesse an meinen analogen Projekten hast.
+  </span>
 </p>
 </section>
   <!-- / Content -->
