Adjust German content

--- a/sources/index_de.html
+++ b/sources/index_de.html
@@ -46,9 +46,9 @@
     <i class="fa fa-3x fa-github-square"></i>
   </a>
   <span class="contact--description">
-    Schau einfach auf meiner
+    Schau auf meiner
     <a target="_blank" href="https://github.com/fraulyoner" title="GitHub Seite">GitHub Seite</a> vorbei,
-    wenn dich meine Projekte interessieren.
+    um mehr zu erfahren.
   </span>
 </p>
 <!-- /build:projects -->
@@ -71,8 +71,8 @@
     <i class="fa fa-3x fa-instagram"></i>
   </a>
   <span class="contact--description">
-    Folge mir auf <a target="_blank" href="https://www.instagram.com/fraulyoner/">Instagram</a>, wenn du
-    Interesse an meinen analogen Projekten hast.
+    Folge mir auf <a target="_blank" href="https://www.instagram.com/fraulyoner/">Instagram</a>,
+    wenn dich meine analogen Projekte interessieren.
   </span>
 </p>
 <!-- /build:lettering -->
