Add contact links for Twitter and mail
*  Adjust footer: remove contact icons

--- a/sources/index.html
+++ b/sources/index.html
@@ -68,3 +68,26 @@
   </span>
 </p>
 <!-- /build:lettering -->
+
+<!-- build:more -->
+<h2>More?</h2>
+
+<p class="contact">
+  <a class="contact--icon" target="_blank" href="https://twitter.com/FrauLyoner" title="Twitter">
+    <i class="fa fa-3x fa-twitter-square"></i>
+  </a>
+  <span class="contact--description">
+    You can follow me on <a target="_blank" href="https://twitter.com/FrauLyoner">Twitter</a>.
+  </span>
+</p>
+
+<p class="contact">
+  <a class="contact--icon" target="_blank" href="mailto:aljona.buchloh@gmail.com" title="email">
+    <i class="fa fa-3x fa-envelope-square"></i>
+  </a>
+  <span class="contact--description">
+    Drop me an <a target="_blank" href="mailto:aljona.buchloh@gmail.com" title="email">email</a>
+    if you like to get in touch with me.
+  </span>
+</p>
+<!-- /build:more -->
