--- a/sources/index_de.html
+++ b/sources/index_de.html
@@ -76,3 +76,26 @@
   </span>
 </p>
 <!-- /build:lettering -->
+
+<!-- build:more -->
+<h2>Mehr?</h2>
+
+<p class="contact">
+  <a class="contact--icon" target="_blank" href="https://twitter.com/FrauLyoner" title="Twitter">
+    <i class="fa fa-3x fa-twitter-square"></i>
+  </a>
+  <span class="contact--description">
+    Du kannst mir auf <a target="_blank" href="https://twitter.com/FrauLyoner">Twitter</a> folgen.
+  </span>
+</p>
+
+<p class="contact">
+  <a class="contact--icon" target="_blank" href="mailto:aljona.buchloh@gmail.com" title="E-Mail">
+    <i class="fa fa-3x fa-envelope-square"></i>
+  </a>
+  <span class="contact--description">
+    ...oder mir eine <a target="_blank" href="mailto:aljona.buchloh@gmail.com">E-Mail</a>
+    schreiben.
+  </span>
+</p>
+<!-- /build:more -->
