--- a/sources/template.html
+++ b/sources/template.html
@@ -12,46 +12,17 @@
 
 <div class="container">
 
-  <!-- Profile name and avatar -->
   <header>
     <img alt="frau lyoner" src="img/logo/logo.png" class="logo logo--left"/>
     <img alt="" src="img/logo/profile_small.JPG" class="logo logo--right"/>
   </header>
-  <!-- / Profile name and avatar -->
 
-  <!-- Content -->
   <section><!-- build:intro --></section>
   <section><!-- build:projects --></section>
   <section><!-- build:lettering --></section>
-  <!-- / Content -->
+  <section><!-- build:more --></section>
 
-  <!-- Contact -->
-  <footer>
-    <ul class="contact--links">
-      <li>
-        <a target="_blank" href="https://twitter.com/FrauLyoner" title="Twitter">
-          <i class="fa fa-twitter-square"></i>
-        </a>
-      </li>
-      <li>
-        <a target="_blank" href="https://github.com/fraulyoner" title="GitHub">
-          <i class="fa fa-github-square"></i>
-        </a>
-      </li>
-      <li>
-        <a target="_blank" href="https://www.instagram.com/fraulyoner/" title="Instagram">
-          <i class="fa fa-instagram"></i>
-        </a>
-      </li>
-      <li>
-        <a target="_blank" href="mailto:aljona.buchloh@gmail.com" title="E-Mail">
-          <i class="fa fa-envelope-square"></i>
-        </a>
-      </li>
-    </ul>
-    <small class="contact--owner">&copy; Aljona Buchloh 2017</small>
-  </footer>
-  <!-- / Contact -->
+  <footer>&copy; Aljona Buchloh 2017</footer>
 
 </div>
 
