--- a/index.html
+++ b/index.html
@@ -12,14 +12,11 @@
 
 <div class="container">
 
-  <!-- Profile name and avatar -->
   <header>
     <img alt="frau lyoner" src="img/logo/logo.png" class="logo logo--left"/>
     <img alt="" src="img/logo/profile_small.JPG" class="logo logo--right"/>
   </header>
-  <!-- / Profile name and avatar -->
 
-  <!-- Content -->
   <section>
 <h2>That's me / <a href="index_de.html">Hi, ich bin's</a></h2>
 
@@ -88,35 +85,30 @@
   </span>
 </p>
 </section>
-  <!-- / Content -->
+  <section>
+<h2>More?</h2>
 
-  <!-- Contact -->
-  <footer>
-    <ul class="contact--links">
-      <li>
-        <a target="_blank" href="https://twitter.com/FrauLyoner" title="Twitter">
-          <i class="fa fa-twitter-square"></i>
-        </a>
-      </li>
-      <li>
-        <a target="_blank" href="https://github.com/fraulyoner" title="GitHub">
-          <i class="fa fa-github-square"></i>
-        </a>
-      </li>
-      <li>
-        <a target="_blank" href="https://www.instagram.com/fraulyoner/" title="Instagram">
-          <i class="fa fa-instagram"></i>
-        </a>
-      </li>
-      <li>
-        <a target="_blank" href="mailto:aljona.buchloh@gmail.com" title="E-Mail">
-          <i class="fa fa-envelope-square"></i>
-        </a>
-      </li>
-    </ul>
-    <small class="contact--owner">&copy; Aljona Buchloh 2017</small>
-  </footer>
-  <!-- / Contact -->
+<p class="contact">
+  <a class="contact--icon" target="_blank" href="https://twitter.com/FrauLyoner" title="Twitter">
+    <i class="fa fa-3x fa-twitter-square"></i>
+  </a>
+  <span class="contact--description">
+    You can follow me on <a target="_blank" href="https://twitter.com/FrauLyoner">Twitter</a>.
+  </span>
+</p>
+
+<p class="contact">
+  <a class="contact--icon" target="_blank" href="mailto:aljona.buchloh@gmail.com" title="email">
+    <i class="fa fa-3x fa-envelope-square"></i>
+  </a>
+  <span class="contact--description">
+    Drop me an <a target="_blank" href="mailto:aljona.buchloh@gmail.com" title="email">email</a>
+    if you like to get in touch with me.
+  </span>
+</p>
+</section>
+
+  <footer>&copy; Aljona Buchloh 2017</footer>
 
 </div>
 
