Adjust content of lettering section

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </p>
 </section>
   <section>
-<h2>Creativity has no limits</h2>
+<h2>With pen and paper</h2>
 
 <img src="img/lettering/lettering_collage_small.jpg" alt="Lettering is fun!"/>
 
