--- a/index_de.html
+++ b/index_de.html
@@ -71,7 +71,7 @@
 </p>
 </section>
   <section>
-<h2>Kreativit&auml;t ist grenzenlos</h2>
+<h2>Mit Stift und Papier</h2>
 
 <img src="img/lettering/lettering_collage_small.jpg" alt="Lettering is fun!"/>
 
