--- a/sources/index.html
+++ b/sources/index.html
@@ -46,7 +46,7 @@
 <!-- /build:projects -->
 
 <!-- build:lettering -->
-<h2>Creativity has no limits</h2>
+<h2>With pen and paper</h2>
 
 <img src="img/lettering/lettering_collage_small.jpg" alt="Lettering is fun!"/>
 
