--- a/sources/index_de.html
+++ b/sources/index_de.html
@@ -54,7 +54,7 @@
 <!-- /build:projects -->
 
 <!-- build:lettering -->
-<h2>Kreativit&auml;t ist grenzenlos</h2>
+<h2>Mit Stift und Papier</h2>
 
 <img src="img/lettering/lettering_collage_small.jpg" alt="Lettering is fun!"/>
 
