--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>fraulyoner</title>
   <link rel="stylesheet" type="text/css" href="lib/normalize.css/normalize.css"/>
   <link rel="stylesheet" type="text/css" href="lib/fontawesome/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css"/>
+  <link rel="stylesheet" type="text/css" href="css/style.min.css"/>
 </head>
 <body>
 
