Adjust position/placement of logo

--- a/sources/template.html
+++ b/sources/template.html
@@ -13,8 +13,8 @@
 <div class="container">
 
   <header>
-    <img alt="frau lyoner" src="img/logo/logo.png" class="logo logo--left"/>
-    <img alt="" src="img/logo/profile_small.JPG" class="logo logo--right"/>
+    <img alt="" src="img/logo/profile_small.JPG" class="logo logo--profile"/>
+    <img alt="frau lyoner" src="img/logo/logo.png" class="logo logo--lettering"/>
   </header>
 
   <section><!-- build:intro --></section>
