--- a/index.html
+++ b/index.html
@@ -20,12 +20,7 @@
   <section>
 <h3>That's me / <a href="index_de.html">Hi, ich bin's</a></h3>
 
-<p>
-  Hi, I'm Aljona Buchloh (nee Murygina) <i>aka frau lyoner</i> from
-  <a target="_blank"
-     href="https://www.google.de/maps/place/Karlsruhe/@49.0157643,8.269451,11z/data=!4m2!3m1!1s0x47970648a2e07809:0xb6fc55734cb7ee7f">
-    Karlsruhe, Germany</a>.
-</p>
+<p>Hi, I'm frau lyoner. I make ideas come alive.</p>
 
 <p>
   I'm one of these
@@ -39,11 +34,13 @@
 
 <p>
   I live out my passion for beautiful projects and clean code in my job at the wonderful company
-  <a target="_blank" href="http://synyx.de/">synyx</a>.
+  <a target="_blank" href="http://synyx.de/">synyx</a> in
+  <a target="_blank" href="https://www.google.de/maps/place/Karlsruhe/@49.0157643,8.269451,11z/data=!4m2!3m1!1s0x47970648a2e07809:0xb6fc55734cb7ee7f">Karlsruhe, Germany</a>.
+  There I'm also known as Aljona Buchloh (nee Murygina).
 </p>
 </section>
   <section>
-<h3>Making ideas come alive</h3>
+<h3>On the keyboard</h3>
 
 <p>
   I'm quite active on GitHub, especially on the
