--- a/sources/index_de.html
+++ b/sources/index_de.html
@@ -1,14 +1,7 @@
 <!-- build:intro -->
 <h3>Hi, ich bin's / <a href="index.html">That's me</a></h3>
 
-<p>
-  Ich bin Aljona Buchloh (geb. Murygina) aus
-  <a target="_blank"
-     href="https://www.google.de/maps/place/Karlsruhe/@49.0157643,8.269451,11z/data=!4m2!3m1!1s0x47970648a2e07809:0xb6fc55734cb7ee7f">
-    Karlsruhe</a>.
-  Aufgrund meines Vornamens, der von der Aussprache her an eine gewisse Wurstsorte erinnert, bin ich auch bekannt
-  als <i>frau lyoner</i>.
-</p>
+<p>Hi, ich bin Frau Lyoner. Ich erwecke Ideen zum Leben.</p>
 
 <p>
   Ich geh&ouml;re zur Spezies der
@@ -25,13 +18,14 @@
 
 <p>
   Meine Leidenschaft f&uuml;r sch&ouml;ne Projekte und sauberen Code lebe ich in meinem Job bei der wundervollen
-  Firma
-  <a target="_blank" href="http://synyx.de/">synyx</a> aus.
+  Firma <a target="_blank" href="http://synyx.de/">synyx</a> in
+  <a target="_blank" href="https://www.google.de/maps/place/Karlsruhe/@49.0157643,8.269451,11z/data=!4m2!3m1!1s0x47970648a2e07809:0xb6fc55734cb7ee7f">Karlsruhe</a>
+  aus. Dort bin ich auch bekannt unter dem Namen Aljona Buchloh (geb. Murygina).
 </p>
 <!-- /build:intro -->
 
 <!-- build:projects -->
-<h3>Ideen zum Leben erwecken</h3>
+<h3>An der Tastatur</h3>
 
 <p>
   Ich bin relativ aktiv auf GitHub unterwegs, insbesondere bei der Entwicklung eines
