Improve readability of content

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      href="https://www.linkedin.com/pulse/20140912183833-3226221-the-magic-of-coding-why-programmers-are-modern-day-wizards">
     modern-day wizards</a> that make amazing things happen with the magic of coding.
   My magical abilities were discovered in the year 2011, since then I spent a lot of time on learning and refining
-  my powers. <i>Java</i> is only one of my various magic spells that I use for breathing life into things.
+  my powers. Java is only one of my various magic spells that I use for breathing life into things.
   I love to create usable web applications that bring joy and happiness to people by solving their problems.
 </p>
 
@@ -46,7 +46,7 @@
   I'm quite active on GitHub, especially on the
   <a target="_blank" href="https://github.com/synyx/urlaubsverwaltung" title="synyx Urlaubsverwaltung">vacation
     management tool</a>
-  that began as an <i>I'm learning Java</i> project during my training period and was open sourced later.
+  that began as an &quot;I'm learning Java&quot; project during my training period and was open sourced later.
 </p>
 
 <p class="contact">
