--- a/sources/index_de.html
+++ b/sources/index_de.html
@@ -10,7 +10,7 @@
     modernen Zauberer</a>, die durch die Magie des Programmierens erstaunliche Dinge vollbringen.
   Meine magischen F&auml;higkeiten habe ich im Jahre 2011 entdeckt, seither verbringe ich eine Menge Zeit damit,
   meine Kr&auml;fte zu erweitern.
-  <i>Java</i> ist nur einer meiner vielf&auml;ltigen Zauberspr&uuml;che, die ich benutze, um Dingen Leben
+  Java ist nur einer meiner vielf&auml;ltigen Zauberspr&uuml;che, die ich benutze, um Dingen Leben
   einzuhauchen.
   Ich liebe es, gut benutzbare Web Anwendungen zu erschaffen, die Menschen Freude bereiten, indem sie ihnen bei der
   Bew&auml;ltigung allt&auml;glicher Probleme helfen.
@@ -31,7 +31,7 @@
   Ich bin relativ aktiv auf GitHub unterwegs, insbesondere bei der Entwicklung eines
   <a target="_blank" href="https://github.com/synyx/urlaubsverwaltung" title="synyx Urlaubsverwaltung">
     Urlaubsverwaltung Tools</a>,
-  das urspr&uuml;nglich als <i>Ich lerne Java</i> Ausbildungsprojekt begann und sp&auml;ter <i>Open Source</i>
+  das urspr&uuml;nglich als &quot;Ich lerne Java&quot; Ausbildungsprojekt begann und sp&auml;ter Open Source
   wurde.
 </p>
 
